[project]
name = "pnr2py"
version = "1.0.0"
#dynamic = ["version"]
dependencies = [
    'sqlalchemy',
    'mysql-connector-python'
]
requires-python = ">= 3.10"
authors = [
  {name = "Anrei Karpatiuk", email = "karpatiuk@gmail.com"},
]
maintainers = [
   {name = "Anrei Karpatiuk", email = "karpatiuk@gmail.com"},
]
readme = "README.md"
license = {text = "MIT License"}
keywords = ["gds", "pnr", "pnr info", "flights", "sabre", "amadeus", "worldspan"]
classifiers = [
  "Programming Language :: Python"
]
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"